prices table alignment for hebrew fixed

--- a/src/components/blocks/prices/Prices.module.scss
+++ b/src/components/blocks/prices/Prices.module.scss
@@ -9,6 +9,12 @@
 .c1 {
   grid-column-start: 2;
   grid-column-end: 4;
+
+  &:lang(iw) {
+    grid-column-start: 10;
+    grid-column-end: 12;
+    text-align: right;
+  }
 }
 
 .c2 {
@@ -16,6 +22,11 @@
   grid-column-end: 8;
   padding-left: 7rem;
   padding-right: 7rem;
+
+  &:lang(iw) {
+    grid-column-start: 2;
+    grid-column-end: 6;
+  }
 }
 
 .c3 {
@@ -25,6 +36,11 @@
   padding-left: 7rem;
   padding-right: 7rem;
   white-space: pre-wrap;
+
+  &:lang(iw) {
+    grid-column-start: 6;
+    grid-column-end: 10;
+  }
 }
 
 .r1 {
@@ -41,21 +57,37 @@
 .r3 {
   grid-row-start: 3;
   grid-row-end: 4;
+
+  &:lang(iw) {
+    text-align: right;
+  }
 }
 
 .r4 {
   grid-row-start: 4;
   grid-row-end: 5;
+
+  &:lang(iw) {
+    text-align: right;
+  }
 }
 
 .r5 {
   grid-row-start: 5;
   grid-row-end: 6;
+
+  &:lang(iw) {
+    text-align: right;
+  }
 }
 
 .r6 {
   grid-row-start: 6;
   grid-row-end: 7;
+
+  &:lang(iw) {
+    text-align: right;
+  }
 }
 
 .r7 {
@@ -97,12 +129,20 @@
   grid-area: 1/4/8/8;
   border: 0.25rem solid var(--accent-color-05);
   border-radius: 1rem;
+
+  &:lang(iw) {
+    grid-area: 1/2/8/6;
+  }
 }
 
 .prices__premium {
   grid-area: 1/8/8/12;
   border-radius: 1rem;
   background-color: var(--text-color);
+
+  &:lang(iw) {
+    grid-area: 1/6/8/10;
+  }
 }
 
 .filters__list {
@@ -112,11 +152,20 @@
     background-image: url('../../../assets/svg/check.svg');
     background-repeat: no-repeat;
     padding-left: 1.5rem;
+
+    &:lang(iw) {
+      padding-right: 1.5rem;
+      background-position: right;
+    }
   }
 }
 
 .filters__more {
   padding-left: 1.5rem;
+
+  &:lang(iw) {
+    padding-right: 1.5rem;
+  }
 }
 
 .prices__button_free {
@@ -135,24 +184,47 @@
   .c1 {
     grid-column-start: 1;
     grid-column-end: 3;
+
+    &:lang(iw) {
+      grid-column-start: 9;
+      grid-column-end: 11;
+    }
   }
 
   .c2 {
     grid-column-start: 3;
     grid-column-end: 7;
+
+    &:lang(iw) {
+      grid-column-start: 1;
+      grid-column-end: 5;
+    }
   }
 
   .c3 {
     grid-column-start: 7;
     grid-column-end: 11;
+
+    &:lang(iw) {
+      grid-column-start: 5;
+      grid-column-end: 9;
+    }
   }
 
   .prices__basic {
     grid-area: 1/3/8/7;
+
+    &:lang(iw) {
+      grid-area: 1/1/8/5;
+    }
   }
 
   .prices__premium {
     grid-area: 1/7/8/11;
+
+    &:lang(iw) {
+      grid-area: 1/5/8/9;
+    }
   }
 }
 
@@ -176,19 +248,37 @@
   .c2 {
     grid-column-start: 1;
     grid-column-end: 6;
+
+    &:lang(iw) {
+      grid-column-start: 1;
+      grid-column-end: 6;
+    }
   }
 
   .c3 {
     grid-column-start: 6;
     grid-column-end: 11;
+
+    &:lang(iw) {
+      grid-column-start: 6;
+      grid-column-end: 11;
+    }
   }
 
   .prices__basic {
     grid-area: 1/1/8/6;
+
+    &:lang(iw) {
+      grid-area: 1/1/8/6;
+    }
   }
 
   .prices__premium {
     grid-area: 1/6/8/11;
+
+    &:lang(iw) {
+      grid-area: 1/6/8/11;
+    }
   }
 }
 
@@ -247,6 +337,11 @@
     grid-column-end: 11;
     padding-left: 5rem;
     padding-right: 5rem;
+
+    &:lang(iw) {
+      grid-column-start: 1;
+      grid-column-end: 11;
+    }
   }
 
   .c3 {
@@ -254,6 +349,10 @@
     grid-column-end: 11;
     padding-left: 5rem;
     padding-right: 5rem;
+    &:lang(iw) {
+      grid-column-start: 1;
+      grid-column-end: 11;
+    }
   }
 
   .r1 {
@@ -266,10 +365,18 @@
 
   .prices__basic {
     grid-area: 1/1/8/11;
+
+    &:lang(iw) {
+      grid-area: 1/1/8/11;
+    }
   }
 
   .prices__premium {
     grid-area: 8/1/15/11;
+
+    &:lang(iw) {
+      grid-area: 8/1/15/11;
+    }
   }
 
   .c3.r1 {
@@ -318,9 +425,11 @@
     padding-left: 3rem;
     padding-right: 3rem;
   }
+
   .r1 {
     padding-top: 3rem;
   }
+
   .r7 {
     padding-bottom: 3rem;
   }
@@ -336,9 +445,11 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
   .r1 {
     padding-top: 1.5rem;
   }
+
   .r7 {
     padding-bottom: 1.5rem;
   }
